--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,17 +9,12 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
   name = "Projects"
   url = "#projects"
   weight = 30
 
 [[main]]
-  name = "Publications"
+  name = "Experience"
   url = "#featured"
   weight = 40
 
@@ -30,7 +25,7 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+[[main]]
+  name = "Resume"
+  url = "files/Software_Engineering_internship.pdf"
+  weight = 70
