--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,15 +86,15 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", repo_branch 
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "srachak@ncsu.edu"
-# phone = "919 888 81 75"
+# phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "", city = "Raleigh", region = "NC", postcode = "97606", country = "United States", country_code = "US"}
+address = {street = "", city = "Raleigh", region = "NC", postcode = "27695", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-# coordinates = {latitude = "37.4275", longitude = "-122.1697"}
+coordinates = {latitude = "35.784559", longitude = "-78.682052"}
 
 # Directions for visitors to locate you.
 # directions = ""
